# font-info

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
font-enumeration/: Cargo.toml  README.md
font-enumeration/src/: core_text.rs  direct_write.rs  fontconfig.rs  lib.rs  utils.rs
src/: logger.rs  main.rs
