[package]
name = "font-metrics"
version = "0.1.0"
edition = "2021"
description = "Load fonts and print their metrics"
keywords = ["font", "glyph", "text"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomcur/font-metrics"

[dependencies]
anyhow =  "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.22"

font-kit = "0.14.1"
swash = "0.1.15"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
