[package]
name = "font-info"
version = "0.1.0"
edition = "2021"
description = "Print font information and metrics"
keywords = ["font", "glyph", "text"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomcur/font-info"

[dependencies]
anyhow =  "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.22"

font-enumeration = { version = "0.9.0", path = "./font-enumeration" }
swash = { version = "0.1.15", default-features = false }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[workspace]
members = [
  "font-enumeration"
]
